--- a/templates/options.twig
+++ b/templates/options.twig
@@ -1,5 +1,5 @@
 <div class="wrap">
-  <h2>WP-Imgur Settings</h2>
+  <h2>WP Imgur Settings</h2>
   <form method="POST" action="{{ formUrl }}">
     {{ nonceField | raw }}
   </form>
