--- a/templates/options.twig
+++ b/templates/options.twig
@@ -2,5 +2,44 @@
   <h2>WP Imgur Settings</h2>
   <form method="POST" action="{{ formUrl }}">
     {{ nonceField | raw }}
+
+    {% if authorized %}
+    <table class="form-table">
+      <tbody>
+        <tr>
+          <th scope="row">
+            <label>Sync Media Library </label>
+          </th>
+          <td>
+            <a id="syncButton" class="button button-primary" href="#">Start Sync</a>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+    {% else %}
+    <table class="form-table">
+      <tbody>
+        <tr>
+          <th scope="row">
+            <label>Connect to Imgur.com</label>
+          </th>
+          <td>
+            <a id="authorizeButton" class="button button-primary" href="{{ authorizeUrl }}" target="_blank">Authorize</a>
+          </td>
+        </tr>
+        <tr>
+          <th scope="row">
+            <label for="max">Enter PIN</label>
+          </th>
+          <td>
+            <input type="text" id="pin" name="pin" value="" />
+          </td>
+        </tr>
+      </tbody>
+    </table>
+    <p class="submit">
+      <input name="submit" id="submit" class="button button-primary" value="Verify PIN" type="submit">
+    </p>
+    {% endif %}
   </form>
 </div>
