Adds initial css

--- a/templates/options.twig
+++ b/templates/options.twig
@@ -14,6 +14,12 @@
             <a id="syncButton" class="button button-primary" href="#">Start Sync</a>
           </td>
         </tr>
+        <tr>
+          <td colspan="2">
+            <div id="progress-bar">
+            </div>
+          </td>
+        </tr>
       </tbody>
     </table>
     {% else %}
