--- a/js/wp-imgur/app/styles/app.css
+++ b/js/wp-imgur/app/styles/app.css
@@ -9,15 +9,194 @@
   display: none;
 }
 
-.wrap div.progress {
+.wrap .progress {
   border-left: 4px solid #F0AD4E;
 }
 
-.imgur-thumb {
+.wrap .static-notice {
+  margin-top: 20px !important;
+}
+
+.wrap-wp-imgur {
+  max-width: 1280px;
+}
+
+fieldset {
+  padding: 1.2em;
+  border: 1px solid #d3d3d3;
+  margin-bottom: 2em;
+  background-color: rgba(255, 255, 255, 0.5);
+  border-radius: 3px;
+}
+
+fieldset legend {
+  font-size: 1.2em;
+  font-weight: bold;
+  padding: 0 6px 0 6px;
+}
+
+#message.updated {
+  margin-top: 1em;
+}
+
+.nav-tab-wrapper span {
+  margin-right: 0.5em;
+}
+
+.nav-tab-wrapper a {
+  border-radius: 3px 3px 0px 0px;
+  /*visibility: hidden;*/
+}
+
+.nav-disabled {
+  color: #adadad;
+}
+
+
+#wp-stub {
+  display: inline;
+}
+
+#wp-stub .wp-stub-tab {
+  visibility: hidden;
+}
+
+.nav-tab {
+  cursor: pointer;
+  border-bottom: 1px solid #ccc;
+}
+
+.nav-tab-active {
+  cursor: default;
+  border-bottom: 1px solid transparent;
+}
+
+.nav-tab-disabled {
+  cursor: default;
+  opacity: 0.5;
+}
+
+.nav-tab-stub {
+  visibility: hidden;
+}
+
+.wrap #static-header {
+  padding: 9px 15px 6px 10px;
+  border-bottom: 1px solid #ccc !important;
+}
+
+.wrap-settings {
+  /*max-width: 640px;*/
+  margin-top: 1.5em;
+  /*padding-bottom: 1em;*/
+}
+
+.wrap-settings p {
+  margin: 0 0 1em 0;
+}
+
+.pin-input {
+  /*line-height: 1.4em;*/
+}
+
+.button-primary {
+}
+
+.button-ajax {
+  display: inline-block;
+  background-repeat: no-repeat;
+  background-position: left;
+  padding-right: 1.2em;
+  width: 0;
+  background-image: url('../../../../images/ajax-loader.gif');
+  transition: background 1s;
+}
+
+.button-ajax.active {
+  width: 100px;
+}
+
+.ul-pin li {
+  display: inline-block;
+  vertical-align: middle;
+}
+
+.wrap-extra-settings {
+  opacity: 0;
+}
+
+.extra-settings-active {
+  opacity: 1;
+  transition: opacity 300ms;
+}
+
+.extra-settings-inactive {
+  opacity: 0;
+}
+
+.wp-button-view {
+  display: inline-block;
+}
+
+.wp-button {
+  /*border: 1px solid red;*/
+  /*display: inline-block;*/
+}
+
+.wp-button-spinner {
+  display: inline-block;
+  line-height: 1em;
+  float: none;
+}
+
+.wp-imgur-auth td {
+  padding: 0;
+}
+
+.wp-imgur-auth td input {
+  display: block;
+  line-height: 1.5em;
+  width: 100%;
+  max-width: 300px;
+  margin-bottom: 1em;
+}
+
+.auth-verify-pin th {
+  display: none;
+}
+
+.auth-verify-pin td {
+  width: 100%;
+  padding: 0;
+}
+
+.auth-verify-pin p.submit {
+  margin: 0;
+  padding: 0;
+}
+
+#wp-imgur .sync {
+  padding: 0;
+  margin: 1em 1em 1em 0;
+}
+
+#wp-imgur .sync p {
+  font-size: 1.3em;
+  margin: 1em 0;
+}
+
+#wp-imgur .sync-thumb {
   border: none;
   outline: none;
-  margin: 0 auto;
+  margin: 1em 0;
   width: 150px;
   height: 150px;
-  transition: background-image 200ms ease-in-out;
+}
+
+.wp-progress-button-progress {
+  font-weight: bold;
+}
+
+.wp-progress-button .button {
+  vertical-align: middle;
 }
