--- a/templates/options.html
+++ b/templates/options.html
@@ -1,5 +1,5 @@
-<div class="wrap">
-  <h2>WP Imgur Settings</h2>
+<div class="wrap wrap-wp-imgur">
+  <h2 id="static-header">WP Imgur</h2>
   <div id="wp-imgur">
     <div id="message" class="updated progress static-notice">
       <p>
