--- a/js/wp-imgur/app/templates/auth/authorized.hbs
+++ b/js/wp-imgur/app/templates/auth/authorized.hbs
@@ -1,3 +1,2 @@
 <p>WP Imgur is authorized to upload images to your Imgur.com account.</p>
-  <button class="button button-primary"
-    {{action 'openAuthorizeUrl'}}>Reauthorize</button>
+{{wp-button action='openAuthorizeUrl' label='Reauthorize'}}
