--- a/js/wp-imgur/app/templates/auth/unauthorized.hbs
+++ b/js/wp-imgur/app/templates/auth/unauthorized.hbs
@@ -1,6 +1,4 @@
 <p>Before you begin using WP Imgur, you need to grant it permissions
 to upload media to your Imgur Account. Click the <em>authorize</em> button to
 proceed.</p>
-<button class="button button-primary button-large"
-{{action 'openAuthorizeUrl'}}>Authorize</button>
-
+{{wp-button action='openAuthorizeUrl' label='Authorize'}}
