Fixes pending issues.
* Removes debug log from task queue.
* Fixes styling of notice.error.
* Fixes progress locked to 100% before load.
* Fixes thumbnail for restarted queue.

--- a/js/wp-imgur/app/styles/app.css
+++ b/js/wp-imgur/app/styles/app.css
@@ -39,6 +39,10 @@ fieldset legend {
   margin-top: 1em;
 }
 
+.nav-tab-wrapper {
+  margin-bottom: 0.5em;
+}
+
 .nav-tab-wrapper span {
   margin-right: 0.5em;
 }
