Adds Attribution to Imgur.com

--- a/js/wp-imgur/app/styles/app.css
+++ b/js/wp-imgur/app/styles/app.css
@@ -190,3 +190,25 @@ fieldset legend {
 .wp-progress-button .button {
   vertical-align: middle;
 }
+
+.attribution {
+  font-size: 0.7em;
+}
+
+.attribution {
+  float: right;
+}
+
+.attribution a {
+  text-decoration: none;
+}
+
+.attribution a:hover {
+  text-decoration: underline;
+}
+
+@media screen and (max-width: 520px) {
+  .attribution .text {
+    display: none;
+  }
+}
