--- a/js/wp-imgur/app/templates/application.hbs
+++ b/js/wp-imgur/app/templates/application.hbs
@@ -4,6 +4,8 @@
     content=pages.labels
     selectedIndex=pages.selectedPage
     lockEnabled=pages.lockEnabled }}
+  <span class='attribution'><span class='text'>Powered by</span><a
+  href="http://imgur.com">Imgur.com</a></span>
 </h2>
 
 {{notice-bar}}
