Adds Ember I18n based localization.
* TODO: figure out how to do localization of attributes.
* Pending Localizations
  * verifypin section body.
  * cleanup album section body.

--- a/js/wp-imgur/app/templates/auth.hbs
+++ b/js/wp-imgur/app/templates/auth.hbs
@@ -1,6 +1,6 @@
 <fieldset>
 	<legend>
-    <span>Authorize</span>
+    <span>{{t 'section.auth.title' }}</span>
   </legend>
   <div class="wp-imgur-auth">
   {{outlet}}
