--- a/js/wp-imgur/app/templates/auth/authorized.hbs
+++ b/js/wp-imgur/app/templates/auth/authorized.hbs
@@ -1,3 +1,3 @@
-<p>WP Imgur is authorized to upload images to your <a
-href="http://imgur.com">Imgur</a> account in <em>{{ config.uploadMode }}</em> mode</a>.</p>
+<p></p>
+<p>{{t 'section.auth.authorized' uploadModeBinding=config.uploadMode }}
 {{wp-button action='openAuthorizeUrl' label='Reauthorize'}}
