--- a/js/wp-imgur/app/templates/application.hbs
+++ b/js/wp-imgur/app/templates/application.hbs
@@ -4,7 +4,7 @@
     content=pages.labels
     selectedIndex=pages.selectedPage
     lockEnabled=pages.lockEnabled }}
-  <span class='attribution'><span class='text'>Powered by</span><a
+  <span class='attribution'>{{t 'credits.tagline' tagName='span' }}<a
   href="http://imgur.com">Imgur.com</a></span>
 </h2>
 
